update requirements specification

--- a/需求规格说明书.md
+++ b/需求规格说明书.md
@@ -1,38 +1,102 @@
+[toc]
 # 一、引言
+## 1.1 编写目的
 &emsp;&emsp;<font size=3>编写本需求规格说明书是为了详细阐述本项目的产品需求和系统功能。本文由小组讨论决定，按照总体描述、前提与假设、界面原型设计、系统功能描述验收标准这四个方面来阐述我们的想法。希望老师同学能够给我们提出一些建议，帮助我们完善需求分析。  
-  
+##1.2 项目简介
++ 项目名称:追番提醒小助手
++ 项目面向用户:动漫爱好者
++ 项目开发者:黄亦薇团队
+
+##1.3 参考资料
++ 各类博客
++ 《构建之法》（第三版）
+
 # 二、总体描述  
 ## 2.1 项目背景
-&emsp;&emsp;在进入研究生阶段后，生活节奏日益加快。同学们在闲暇之余更多的选择那种耗时短、能随时停止的娱乐活动来缓解工作任务带来的压力。所以，游戏已经不符合上述的特征，看动漫和听歌渐渐成为很多同学日常生活的一部分。美剧的受众依然比较窄且获取渠道众多不存在像动漫一样有时找不到资源的情况。所以看美剧不在我们的需求考虑之内。听歌的渠道就更多了，各种APP眼花缭乱且版权保护较严，我们这种普通开发者无从下手。并且动漫不同于美剧，动漫数量太多有些比较小众，所以资源并不好找。所以，我们把看动漫引起的痛点当做本项目的重点解决对象。
+&emsp;&emsp;在进入研究生阶段后，生活节奏日益加快。同学们在闲暇之余更多的选择那种耗时短、能随时停止的娱乐活动来缓解工作任务带来的压力。据我们调查，使用看动漫这种方式来休闲的同学占大多数。但是呢，同时追的动漫可能有很多部，而这些动漫的版权分散在国内众多视频网站，如果同时追的动漫太多那么可能会经常忘记这部动漫在哪一家网站、周几更新。下面展示一张2017年10月新出动漫更新的日期以及版权所在方。
+![](https://i.imgur.com/N9T9hBF.jpg)  
+![](https://i.imgur.com/nI49kvl.jpg)  
+如果同时追5部以上的动漫，对记忆力的考验还是蛮大的……。此外，由于一周一更，有时候太忙几周说不定都没时间看，所以很容易忘记自己看到哪一集了。为了解决这个问题，我们制作一款能够查看动漫更新的小程序。
 ## 2.2 项目目标
-&emsp;&emsp;基于上述背景，我们不难发现，在我们的技术能力范围内，给用户提供一款免费且能够下载优质动漫资源的网站是一个指向明确且容易出成果的目标。因为，我们几个都熟悉Python，然后我和李世钰本身对web有一定的基础，开发爬虫不会有很大的困难。其次，我们刚做完上一次作业，对python的GUI程序开发有一定的了解。所以我们认为，做一个这样接地气的应用程序是完全可以做到的。
+&emsp;&emsp;基于上述背景，我们不难发现，在我们的技术能力范围内，让用户只用打开我们的程序就能看到订阅的动漫的更新情况，不需要把精力浪费在记忆这些琐碎且容易混淆的事情上。
 ## 2.3 典型用户场景
-&emsp;&emsp;经过一个星期的努力，小明终于完成了导师布置的任务。在发过邮件之后小明坐在椅子上伸了一个懒腰准备把自己从这一个星期的紧张状态中解放出来。嘿嘿，好久没玩英雄联盟了，版本更新了听室友说XX英雄现在特别强势。正当小明摩拳擦掌准备玩一局的时候，他突然意识到如果老师过一会儿回复邮件过来自己不能及时回复耽误事了怎么办？并且在实验室打游戏影响也不好……想到这，小明默默地把鼠标从英雄联盟上移开了。诶，对了，小明想起了昨天晚上室友给他推荐的一个动漫。小明飞快的打开浏览器，进入B站，成功搜索到了这个动漫，在几秒的加载等待时间后小明开始看起了动漫，然而今天B站挺卡的，在1080P的画质下根本无法流畅观看。作为一个程序猿，小明无法忍受非1080P的视频。这时，小明想到现在是吃饭的点了，我百度一下利用吃饭的时间下载2集，吃完饭回来看不就行了，一举两得。这时的小明并不知道，优质的动漫资源并没有他想象中的好找。小明点开百度，发现第一页的网站，要么是要下载播放器要么是标题党，咦怎么和我找美剧不一样呢？小明想到平时找不到的东西去贴吧看看说不定有意外收获，然后小明点进了贴吧。结果……第一页和他一样都是伸手党。哎，小明长叹一声，关掉了浏览器去吃饭了。
-## 2.4 典型用户需求说明
-&emsp;&emsp;经过上述典型用户场景分析，我们可以发现小明这类用户的定位是对动漫没有深入研究，不想花时间只想当伸手党。当伸手党并没有什么错，用户精力有限，不能面面俱到，就算是计算机专业的学生，短时间内找到资源也不是易事。可想而知，如果不是计算机专业的学生，可能鉴别垃圾站点的能力比较欠缺，这样就会带来很多麻烦，本来想休息一下结果事与愿违，这对心情的影响是极大的。所以这个看似很简单的需求背后隐藏着一系列的连锁反应。
-## 2.5 运行环境要求  
+我们的软件主要面向一类用户  
+<table border="0" cellpadding="0" cellspacing="0" id="user-content-sheet0">
+ <tbody>
+  <tr>  
+   <td>&nbsp;姓名</td>
+   <td>小明</td>
+  </tr>
+  <tr>
+   <td>&nbsp;性别</td>
+   <td>男</td>
+  </tr>
+  <tr>
+   <td>&nbsp;职业</td>
+   <td>学生</td>
+  </tr>
+  <tr>
+   <td>&nbsp;知识层次和能力</td>
+   <td>武汉大学硕士</td>
+  </tr>
+  <tr>
+   <td>&nbsp;动机、目的、困难</td>
+   <td>动机、目的：喜欢看动漫 困难:记住不所追的动漫的更新日期及观看平台以及自己看到了哪一集</td>
+  </tr>
+  <tr>
+   <td>&nbsp;用户偏好</td>
+   <td>同时追多部动漫</td>
+  </tr>
+  <tr>
+   <td>&nbsp;用户比例</td>
+   <td>40%</td>
+  </tr>
+  <tr>
+   <td>&nbsp;典型场景</td>
+   <td>想放松自己的时候忘记了想看动漫的观看平台</td>
+  </tr>
+ </tbody>
+</table>
+
+## 2.4 场景举例
+&emsp;&emsp;在两周的紧张工作中，小明今天中午完成了导师布置的任务终于有时间可以看动漫了。于是小明打开了“动漫更新提醒助手”。小明点击他订阅了的最想看的动漫，发现已经由3集更新了！“哈哈两周更新3集，这波不亏”，小明自言自语道。“咦，上一次我看到哪一集了呢？”小明心想。这时小明点开了历史记录，发现上次看到了第7集。好开始补番了，小明伸了个懒腰进入页面上提示的观看网站准备开始补番。在几个小时酣畅淋漓的观看之后，小明关闭了浏览器，点开历史记录，添加了自己今天观看的记录。当正要关闭软件的时候，小明想起了昨天室友小王推荐的一部新番，小明想下次看看怎么样。这时小明在搜索框中输入了动漫的名字，然后点击搜索，接着下方的列表里显示出这部动漫的观看地址。接着，小明点击添加订阅，然后就把这部动漫添加进了订阅列表。“嗯，下次我就可以看了”，小明心满意足的关闭了软件。
+
+## 2.5 典型用户需求说明
+&emsp;&emsp;因为小明每天很忙，而动漫一周一看甚至太忙了几周一看，每次想看的时候总会忘记某部动漫是不是今天更新，在哪个平台观看。折让小明很苦恼，还要根据网上的统计图一个个找，并且自己以及很久没看了所以忘记了上一次看到哪里了。
+## 2.6 运行环境要求  
 + 操作系统
 windows7/8/8.1/10 家庭版/专业版/旗舰版  
++ 网络要求 1Mbps以上
 
 # 三、前提与假设
 ## 3.1 前提
 -  用户电脑能正常连接互联网
--  存在一个具有优质动漫资源的网站
 -  该网站不会严格限制爬虫的访问  
 
 ## 3.2 假设
-- 用户想下载一部动漫，等有时间了看
-- 用户不具备资源搜索的技巧
-- 用户不想花时间去了解资源搜索的技巧
+- 用户经常忘记追番的信息
+- 用户很忙
 
 # 四、界面原型设计
-![](https://i.imgur.com/oRw3H2X.png)
+![](https://i.imgur.com/iS7YBkZ.png)  
+![](https://i.imgur.com/tFWLbU6.png)
 
 # 五、系统功能描述验收标准  
 ## 5.1 系统功能描述  
-&emsp;&emsp;本系统的功能主要是用户在搜索框内输入目标资源的名称，然后点击搜索按钮，爬虫根据输入从我们指定的优质资源站点搜索下载链接并把结果显示在界面上供用户下载。
+&emsp;&emsp;本软件提供用户添加自己想看动漫的订阅功能，订阅之后，每当用户想看动漫的时候打开我们的软件就能知道今天是否有更新，更新到哪一集了。
 ## 5.2 验收标准
-+ 界面可正常加载
-+ 控件能根据文字大小自适应
-+ 对各种异常给出相应的提示
-+ 程序关闭能正常释放资源
+| 测试功能 | 功能模块 |   实现功能   |   测试功能   |     期望结果     | 完成情况 |
+|:--------:|:--------:|:------------:|:------------:|:----------------:|:--------:|
+|          | 订阅     | 进入订阅界面 | 点击订阅按钮 | 进入订阅界面     |          |
+|          |          | 订阅列表显示 | 显示         | 显示在订阅界面   |          |
+|          |          | 添加订阅     | 点击添加按钮 | 加入订阅         |          |
+|          |          | 删除订阅     | 点击删除按钮 | 删除订阅         |          |
+|          | 搜索     | 进入搜索界面 | 点击搜索按钮 | 进入搜索界面     |          |
+|          |          | 搜索框       | 输入         | 搜索结果         |          |
+|          |          | 自动加入订阅 | 输入         | 订阅确认框       |          |
+|          | 主界面   | 显示最近结果 | 进入程序     | 返回最新         |          |
+|          |          | 更新         | 点击按钮     | 刷新显示列表     |          |
+|          | 显示列表 | 历史记录     |              | 上次观看的集数   |          |
+|          |          | 当前最新     |              | 显示当前最新集数 |          |
+|          |          | 进入观看页面 | 点击集数     | 跳转观看页面     |          |
+
