--- a/需求规格说明书.md
+++ b/需求规格说明书.md
@@ -1,4 +1,19 @@
-[toc]
+* [一、引言](#一引言)
+  * [1.1 编写目的](#11-编写目的)
+* [二、总体描述](#二总体描述)
+  * [2.1 项目背景](#21-项目背景)
+  * [2.2 项目目标](#22-项目目标)
+  * [2.3 典型用户场景](#23-典型用户场景)
+  * [2.4 场景举例](#24-场景举例)
+  * [2.5 典型用户需求说明](#25-典型用户需求说明)
+  * [2.6 运行环境要求](#26-运行环境要求)
+* [三、前提与假设](#三前提与假设)
+  * [3.1 前提](#31-前提)
+  * [3.2 假设](#32-假设)
+* [四、界面原型设计](#四界面原型设计)
+* [五、系统功能描述验收标准](#五系统功能描述验收标准)
+  * [5.1 系统功能描述](#51-系统功能描述)
+  * [5.2 验收标准](#52-验收标准)
 # 一、引言
 ## 1.1 编写目的
 &emsp;&emsp;<font size=3>编写本需求规格说明书是为了详细阐述本项目的产品需求和系统功能。本文由小组讨论决定，按照总体描述、前提与假设、界面原型设计、系统功能描述验收标准这四个方面来阐述我们的想法。希望老师同学能够给我们提出一些建议，帮助我们完善需求分析。  
